Poprawki promotora, rozpisane wprowadzenie w rozdziale 4

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -6,3 +6,10 @@
   year={2015},
   publisher={Springer}
 }
+
+@MastersThesis{kidzinski,
+author = {Kidziński Ł. },
+title = {Statistical foundation of recommender systems},
+school = {University of Warsaw},
+year = {2011}
+}
