Praca z uwzględniemiem poprawek promotora. Dodanie wstępu do części prktycznej. Dołączenie obrazków.

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1,15 +1,97 @@
-@incollection{ricci2015recommender,
-  title={Recommender systems: introduction and challenges},
-  author={Ricci, Francesco and Rokach, Lior and Shapira, Bracha},
-  booktitle={Recommender systems handbook},
-  pages={1--34},
-  year={2015},
-  publisher={Springer}
-}
-
 @MastersThesis{kidzinski,
 author = {Kidziński Ł. },
-title = {Statistical foundation of recommender systems},
+title = {Statistical foundation of recommender systems.},
 school = {University of Warsaw},
+year = {2011}
+}
+
+@Book{spodzieja,
+ALTauthor = {Spodzieja S.},
+title = {Wstęp do analizy matematycznej funkcje jednej zmiennej.},
+}
+
+@Book{rsh,
+ALTauthor = {Ricci F., Rokach L., Shapira B., Kantor P.},
+title = {Recommender Systems Handbook},
+publisher = {Springer},
+year = {2011}
+}
+
+@Book{bre,
+ALTauthor = {Gorakala S. K.},
+title = {Building Recommendation Engines.},
+publisher = {Packt},
+year = {2016}
+}
+
+@Book{sadzwpr,
+ALTauthor = {Walesiak M., Gantar E.},
+title = {Statystyczna analiza danych z wykorzystaniem programu R.},
+publisher = {Wydawnictwo Naukowe PWN},
+year = {2009}
+}
+
+@InProceedings{edpir,
+author = {Morzy T.},
+title = {Eksploracja danych: problemy i rozwiązania.},
+year = {1999},
+organization = {Instytut Informatyki Politechniki Poznańskiej},
+}
+
+@InProceedings{ascgdpds,
+author = {Nowak - Brzezińska A.},
+title = {Analiza skupień. Konspekt do zajęć: Statystyczne metody analizy danych.},
+year = {2012},
+OPTorganization = {Zakład Systemów Informatycznych},
+}
+
+
+@InProceedings{svmmwn,
+author = {Stefanowski J.},
+title = {SVM - Support Vector Machines. Metoda wektorów nośnych},
+OPTorganization = {Instytut Informatyki Politechniki Poznańskiej},
+}
+
+@Book{edmia,
+ALTauthor = {Morzy T.},
+title = {Eksploracja danych. Metody i algorytmy.},
+publisher = {Wydawnictwo Naukowe PWN},
+year = {2013}
+}
+
+@Article{ulafiir,
+author = {Berry M.W., Dumais S.T., O'Brien G.W.},
+title = {Using Linear Algebra for Intelligent Information Retrival.},
+journaltitle = {Society for Industrial and Applied Mathematics},
+year = {1995}
+
+}
+
+
+@Book{wztp,
+ALTauthor = {Krzyśko M.},
+title = {Wykład z teorii prawdopodobieństwa.},
+publisher = {Wydawnictwo Naukowe - Techniczne},
+year = {2000}
+}
+
+@Book{ealIII,
+ALTauthor = {Banaszak G., Gajda W.},
+title = {Elementy algebry liniowej część I i II.},
+publisher = {Wydawnictwo Naukowe - Techniczne},
+year = {2002}
+}
+
+@Article{mcvals,
+author = {Haoming L., Bangzheng H., Lublin M., Pere Y.},
+title = {Matrix Completion via Alternating Least Square(ALS).},
+journaltitle = {Distributed Algorithms and Optimization},
+year = {2015}
+}
+
+@Book{alzega,
+ALTauthor = {Poreda T., Jędrzejewski J.},
+title = {Algebra liniowa z elementami geometrii analitycznej.},
+publisher = {Politechnika Łódzka},
 year = {2011}
 }
