Praca z uwzględnieniem poprawek od promotora 2.

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1,41 +1,41 @@
 @MastersThesis{kidzinski,
-author = {Kidziński Ł. },
-title = {Statistical foundation of recommender systems.},
-school = {University of Warsaw},
-year = {2011}
+author = "Kidziński Ł.",
+title = "Statistical foundation of recommender systems.",
+school = "University of Warsaw",
+year = "2011"
 }
 
 @Book{spodzieja,
-ALTauthor = {Spodzieja S.},
-title = {Wstęp do analizy matematycznej funkcje jednej zmiennej.},
+ALTauthor = "Spodzieja S.",
+title = "Wstęp do analizy matematycznej funkcje jednej zmiennej.",
 }
 
 @Book{rsh,
-ALTauthor = {Ricci F., Rokach L., Shapira B., Kantor P.},
-title = {Recommender Systems Handbook},
-publisher = {Springer},
-year = {2011}
+ALTauthor = "Ricci F. and Rokach L. and Shapira B. and Kantor P.},
+title = "Recommender Systems Handbook",
+publisher = "Springer",
+year = "2011"
 }
 
 @Book{bre,
-ALTauthor = {Gorakala S. K.},
-title = {Building Recommendation Engines.},
-publisher = {Packt},
-year = {2016}
+ALTauthor = "Gorakala S. K.",
+title = "Building Recommendation Engines.",
+publisher = "Packt",
+year = "2016",
 }
 
 @Book{sadzwpr,
-ALTauthor = {Walesiak M., Gantar E.},
-title = {Statystyczna analiza danych z wykorzystaniem programu R.},
-publisher = {Wydawnictwo Naukowe PWN},
-year = {2009}
+ALTauthor = "Walesiak M. and Gantar E.",
+title = "Statystyczna analiza danych z wykorzystaniem programu R.",
+publisher = "Wydawnictwo Naukowe PWN",
+year = "2009",
 }
 
 @InProceedings{edpir,
-author = {Morzy T.},
-title = {Eksploracja danych: problemy i rozwiązania.},
-year = {1999},
-organization = {Instytut Informatyki Politechniki Poznańskiej},
+author = "Morzy T.",
+title = \textit{Eksploracja danych: problemy i rozwiązania.},
+year = "1999",
+organization = "Instytut Informatyki Politechniki Poznańskiej",
 }
 
 @InProceedings{ascgdpds,
@@ -43,13 +43,6 @@ author = {Nowak - Brzezińska A.},
 title = {Analiza skupień. Konspekt do zajęć: Statystyczne metody analizy danych.},
 year = {2012},
 OPTorganization = {Zakład Systemów Informatycznych},
-}
-
-
-@InProceedings{svmmwn,
-author = {Stefanowski J.},
-title = {SVM - Support Vector Machines. Metoda wektorów nośnych},
-OPTorganization = {Instytut Informatyki Politechniki Poznańskiej},
 }
 
 @Book{edmia,
@@ -64,9 +57,7 @@ author = {Berry M.W., Dumais S.T., O'Brien G.W.},
 title = {Using Linear Algebra for Intelligent Information Retrival.},
 journaltitle = {Society for Industrial and Applied Mathematics},
 year = {1995}
-
 }
-
 
 @Book{wztp,
 ALTauthor = {Krzyśko M.},
@@ -95,3 +86,11 @@ title = {Algebra liniowa z elementami geometrii analitycznej.},
 publisher = {Politechnika Łódzka},
 year = {2011}
 }
+
+@Book{jakubowski,
+ALTauthor = {Jakubowski J., Sztencel R.},
+title = {Wstęp do teorii prawdopodobieństwa.},
+publisher = {SCRIPT},
+year = {2001}
+}
+
