Zmiany promotora, nowy podrozdził, rozwinięcie rozdziału o SVD.

--- a/magisterska.tex
+++ b/magisterska.tex
@@ -125,7 +125,7 @@ napisana w Instytucie Matematyki
 
 \chapter{Wstęp}
 %TODO napiszemy na końcu
-\chapter{Preliminaria} %teorie, definicje, twierdzenia z innych działów - potrzebne do zrozumienia pracy
+\chapter{Preliminaria} 
 \section{Oznaczenia używane w pracy}
 $\setN$ - zbiór liczb naturalnych,
 \\$\setR$ - zbiór liczb rzeczywistych,
