Poprawki, propozycja nowego rozdzialu

--- a/magisterska.tex
+++ b/magisterska.tex
@@ -125,7 +125,7 @@ napisana w Instytucie Matematyki
 
 \chapter{Wstęp}
 %TODO napiszemy na końcu
-\chapter{Preliminaria} 
+\chapter{Preliminaria} %definicje
 \section{Oznaczenia używane w pracy}
 $\setN$ - zbiór liczb naturalnych,
 \\$\setR$ - zbiór liczb rzeczywistych,
